# Assignment2

Package-app/: .gitignore  README.md  pyproject.toml
Package-app/src/package_app/: __init__.py  main.py
simple-app/: .gitignore  README.md  main.py  pyproject.toml
