[project]
name = "package-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "=Mujahid Iqbal", email = "=mujahidsir@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
 

ass2 = "package_app.main:hello"
add =  "package_app.main:add_numbers"

run-main = "main.main:run-main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
